syntax = "proto3";

option go_package = "";

package auth;

service Greeter {
  rpc Auth_Check(Auth_Check_Request) returns (Auth_Check_Reply) {};
}

message Auth_Check_Request {
   string sid = 1;
}

message Auth_Check_Reply {
  bool status = 1;
}
